k8s/policies/validate-task-request-geographical-group/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8svalidatetaskrequestgeographicalgroup
spec:
  crd:
    spec:
      names:
        kind: K8sValidateTaskRequestGeographicalGroup
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8svalidatetaskrequestgeographicalgroup

        geo := input.review.object.spec.geo
        
        group_inventory := data.inventory.cluster["policydriven.unimi.it/v1alpha1"]["GeographicalGroup"]

        # ---------------------------------------------------------------------
        # Violation: invalid requested geographical group in the TaskRequest
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          geo != null
          
          not group_inventory[geo]
          
          msg := sprintf("GeographicalGroup '%v' does not exist in the cluster", [geo])
        }
