k8s/policies/validate-task-request-geographical-group/tests/bad.yaml
apiVersion: policydriven.unimi.it/v1alpha1
kind: TaskRequest
metadata:
  name: bad
  namespace: compute
spec:
  issuer: issuer
  geo: us-east
