k8s/policies/validate-task-request-geographical-group/tests/inventory.yaml
apiVersion: policydriven.unimi.it/v1alpha1
kind: GeographicalGroup
metadata:
  name: eu-south
spec:
  locations:
    - mil
    - rom
