k8s/policies/validate-task-request-geographical-group/tests/ok.yaml
apiVersion: policydriven.unimi.it/v1alpha1
kind: TaskRequest
metadata:
  name: ok
  namespace: compute
spec:
  issuer: issuer
  geo: eu-south
